# RSA

./: .gitignore  CMakeLists.txt  README.md
include/: RSA_cipher.h  common.h  declarations.h  encodeKey.h  readFile.h  signAndVerify.h
src/: RSA_cipher.c  RSA_generateKey.c  encodeKey.c  main.c  readFile.c  signAndVerify.c
